--- a/gaji-namul.html
+++ b/gaji-namul.html
@@ -3,20 +3,40 @@
     <html lang="en">
         <head>
             <meta charset="utf-8">
-        <title><!--name of dish--></title>
+        <h1>Gaji-Namul</h1>
         </head>
         <body>
             <!--picture of dish-->
-            <img src="" alt="">
-            <!--paragraph introducing dish-->
+            <img src="/home/tori/Odin_Project/repos/odin-recipes/pictures/gaji-namul.jpeg" alt="Shredded steamed asian eggplant covered in a thin brown sauce with chives and crushed sesame seeds">
+            <p>Gaji-Namul is a dish I usually prepair at the same time as my <a href="file:///home/tori/Odin_Project/repos/odin-recipes/silken-tofu.html" target="_blank" rel="noopener noreferrer">silken tofu</a> for an easy prepped pairing that stays good in the fridge for up to 4 days to add to rice whenevers. This spicy steamed asian eggplant garlic and sesame explosion is wonderful hot or cold.</p>
+            <p>If you don't have a stove top steamer you can microwave your cuts of eggplant for 5-6 minutes for viable results.</p>           <!--unordered list of ingredients-->
             <p></p>
-            <!--unordered list of ingredients-->
+            <p><strong>Ingredients</strong></p>
             <ul>
-                <li></li>
+                <li>1 pound of Korean eggplants (3-4 eggplants), caps removed and washed</li>
             </ul>
+            <p><strong>Sauce</strong></p>
+            <ul>
+            <li>3 garlic cloves, minced</li>
+            <li>2 green onions, chopped</li>
+            <li>1 tablespoon soy sauce</li>
+            <li>1 teaspoon fish sauce</li>
+            <li>1 teaspoon Korean hot pepper flakes (gochugaru)</li>
+            <li>2 teaspoons toasted sesame oil</li>
+            <li>1 tablespoon toasted sesame seeds, crushed</li>
+            </ul>
+            <p><strong>Prep and Assembly</strong></p>
             <!--ordered list of steps-->
             <ol>
-                <li></li>
+                <li>Prep your steamer by adding 2 cups of water to it. Set heat to medium-high for it to boil, it should take about 5 minutes.</li>
+                <li>Meanwhile, cut the eggplants crosswise into 2.5 inch pieces. Cut the thicker pieces in half lengthwise</li>
+                <li>When the water starts boiling, put the prepared eggplants on the steamer rack and cover. Steam for 5 minutes over medium high heat.</li>
+                <li>Remove from the heat. Take out the steamed eggplant and transfer to a cutting board. Let cool for 5 to 10 minutes until you can easily handle them.</li>
+                <li>Tear each piece into bite size pieces.</li>
+                <li>Combine garlic, green onion, soy sauce, fish sauce, hot pepper flakes, and sesame oil in a mixing bowl</li>
+                <li>Mix the ingredients well with a wide spoon</li>
+                <li>Add the steamed eggplant to the mixing bowl and mix well, coating the eggplant pieces. </li>
+                <li>Top with crushed sesame seeds and serve with rice.</li>
             </ol>
         </body>
 </html>
