--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
         <body>
         <meta charset=""utf-8">
         <h1>Odin Recipes</h1>
-        </body>
+        <ul>
+            <li><a href="file:///home/tori/Odin_Project/repos/odin-recipes/silken-tofu.html">Silken Tofu</a></li>
+            <li><a href="/home/tori/Odin_Project/repos/odin-recipes/gaji-namul.html">Gaji-Namul</a></li>
+            <li><a href="/home/tori/Odin_Project/repos/odin-recipes/inarizushi.html">Inarizushi</a></li>
+        
+        </ul>
+
+    </body>
 </html>
