--- a/silken-tofu.html
+++ b/silken-tofu.html
@@ -7,9 +7,9 @@
         </head>
         <body>
             <img src="/home/tori/Odin_Project/repos/odin-recipes/pictures/silken-tofu.jpeg" alt="A block of tofu on a white plate covered with brown sauce and chives">
-            <p>Silken tofu is a wonderful quick-prep dish that pairs perfectly with rice. It can be eaten right after preparing or kept in the fridge for up to 4 days. Personally I like to keep this and gaji-namul on hand for busy appointment days when I know I'll need something filling to eat but won't want to cook.</p>
-            <!--link and credit to original website for recipe-->
+            <p>Silken tofu is a simple quick-prep dish that pairs perfectly with rice. It can be eaten right after preparing or kept in the fridge for up to 4 days. Personally I like to keep this and gaji-namul on hand for busy appointment days when I know I'll need something filling to eat but won't want to cook.</p>
             
+            <p><strong>Ingredients</strong></p>
             <ul>
                 <li>1 package silken tofu or soft tofu</li>
                 </ul>
@@ -23,9 +23,12 @@
                     <li>2 cloves garlic minced</li>
                     <li>1 green onion chopped</li>
                     <li>1/2 chili pepper chopped, optiona</li>
-            </ul>
-            <!--ordered list of steps-->
+                </ul>
+            <p><strong>Prep and Assembly</strong></p>
             <ol>
+                <li>Prepare the tofu by soaking up the excess liquid with a paper towel, or by carefully tilting the open package over the sink. Place a serving plate on top of the tofu and transfer it onto the plate.</li>
+                <li>Poke holes through top of tofu with chopsticks</li>
+                <li>Combine all sauce ingredients in a bowl and pour it over the tofu. Enjoy!</li>
 
             </ol>
         </body>
