--- a/inarizushi.html
+++ b/inarizushi.html
@@ -3,20 +3,24 @@
     <html lang="en">
         <head>
             <meta charset="utf-8">
-        <title><!--name of dish--></title>
+        <h1>Inarizushi</h1>
         </head>
         <body>
-            <!--picture of dish-->
-            <img src="" alt="">
-            <!--paragraph introducing dish-->
+            <img src="/home/tori/Odin_Project/repos/odin-recipes/pictures/inarizushi.jpeg" alt="Fried tofu pockets marinated in sauce stuffed with seasoned rice">
+            <p>Sometimes I want to make sure I'll have a filling, delicious meal without cooking or shelling out a bunch of cash to eat out. While one can make their own Inari skins for sushi, we will be skipping that process and using prepackages skins. Because of this, I will not be specifying an amout. The beauty of inarizushi is that much like a sandwich, you are only limited by your imagination. You can add an obscene variety of filling to your inari, or stick with seasoned rice.</p>
+            <p>Feel free to add furikake, seaweed salad, poke, and all sorts of other delicious things. You could even imitate one of my favorite experiments with sliced crispy teriyaki chicken with Kewpie mayo topped with sesame seeds and chives if you are feeling adventurous.</p>
             <p></p>
-            <!--unordered list of ingredients-->
+            <p><strong>Ingredients</strong></p>
+            
             <ul>
-                <li></li>
+                <li>cooked seasoned short grain rice (prepared sushi rice), cooled just enough to be comfortable handled with clean hands or gloves</li>
+                <li>small bow of clean icy water</li>
+                <li>Canned or packaged inari skins</li>
             </ul>
-            <!--ordered list of steps-->
+            <p><strong>Prep and Assembly</strong></p>
+            
             <ol>
-                <li></li>
+                <li>Stuff seasoned rice into inari skins adding other ingredients if desired. Best if cooled before serving.</li>
             </ol>
         </body>
 </html>
