attempt to correct index links

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
         <meta charset=""utf-8">
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="file:///home/tori/Odin_Project/repos/odin-recipes/silken-tofu.html">Silken Tofu</a></li>
-            <li><a href="/home/tori/Odin_Project/repos/odin-recipes/gaji-namul.html">Gaji-Namul</a></li>
-            <li><a href="/home/tori/Odin_Project/repos/odin-recipes/inarizushi.html">Inarizushi</a></li>
+            <li><a href="silken-tofu.html">Silken Tofu</a></li>
+            <li><a href="gaji-namul.html">Gaji-Namul</a></li>
+            <li><a href="inarizushi.html">Inarizushi</a></li>
         
-        </ul>
 
     </body>
 </html>
