corrected image links from path to relative path

--- a/silken-tofu.html
+++ b/silken-tofu.html
@@ -6,7 +6,7 @@
         <h1>Silken Tofu</h1>
         </head>
         <body>
-            <img src="/home/tori/Odin_Project/repos/odin-recipes/pictures/silken-tofu.jpeg" alt="A block of tofu on a white plate covered with brown sauce and chives">
+            <img src="silken-tofu.jpeg" alt="A block of tofu on a white plate covered with brown sauce and chives">
             <p>Silken tofu is a simple quick-prep dish that pairs perfectly with rice. It can be eaten right after preparing or kept in the fridge for up to 4 days. Personally I like to keep this and gaji-namul on hand for busy appointment days when I know I'll need something filling to eat but won't want to cook.</p>
             
             <p><strong>Ingredients</strong></p>
