Edited image source format again

--- a/gaji-namul.html
+++ b/gaji-namul.html
@@ -7,7 +7,7 @@
         </head>
         <body>
             
-            <img src="gaji-namul.jpeg" alt="Shredded steamed asian eggplant covered in a thin brown sauce with chives and crushed sesame seeds">
+            <img src="pictures/gaji-namul.jpeg" alt="Shredded steamed asian eggplant covered in a thin brown sauce with chives and crushed sesame seeds">
             <p>Gaji-Namul is a dish I usually prepair at the same time as my <a href="file:///home/tori/Odin_Project/repos/odin-recipes/silken-tofu.html" target="_blank" rel="noopener noreferrer">silken tofu</a> for an easy prepped pairing that stays good in the fridge for up to 4 days to add to rice whenevers. This spicy steamed asian eggplant garlic and sesame explosion is wonderful hot or cold.</p>
             <p>If you don't have a stove top steamer you can microwave your cuts of eggplant for 5-6 minutes for viable results.</p>           <!--unordered list of ingredients-->
             <p></p>
