--- a/inarizushi.html
+++ b/inarizushi.html
@@ -6,7 +6,7 @@
         <h1>Inarizushi</h1>
         </head>
         <body>
-            <img src="FlippantFury/odin-recipes/pictures/inarizushi.jpeg" alt="Fried tofu pockets marinated in sauce stuffed with seasoned rice">
+            <img src="pictures/inarizushi.jpeg" alt="Fried tofu pockets marinated in sauce stuffed with seasoned rice">
             <p>Sometimes I want to make sure I'll have a filling, delicious meal without cooking or shelling out a bunch of cash to eat out. While one can make their own Inari skins for sushi, we will be skipping that process and using prepackages skins. Because of this, I will not be specifying an amount of seasoned rice. In my experience there is little consistency in the amount of inarizushi skins in a package or can. The beauty of inarizushi is that much like a sandwich, you are only limited by your imagination. You can add an obscene variety of fillings to your inari, or stick with seasoned rice.</p>
             <p>Feel free to add furikake, seaweed salad, poke, and all sorts of other delicious things. You could even imitate one of my favorite experiments with sliced crispy teriyaki chicken with Kewpie mayo topped with sesame seeds and chives. Limitless.</p>
             <p></p>
